SET (PRIVATE_INCLUDE_DIRS Source)

SET (PUBLIC_INCLUDE_DIRS Include)

FILE ( GLOB_RECURSE
       INCLUDE_FILES
       Include/**
       Source/detail/*.h
       Source/detail/*.hpp
      )


####################### CUSTOMIZE LIBRARY BUILD ########################
SET (TARGET_NAME Math)

#SET(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE (Boost 1.46 REQUIRED)

SET ( PRIVATE_INCLUDE_DIRS
    ${PRIVATE_INCLUDE_DIRS}
    ${Boost_INCLUDE_DIR}
    )


SET ( SOURCE_FILES
    Source/vector3.cpp
    )

########################################################################


ADD_LIBRARY( ${TARGET_NAME}
    SHARED STATIC
    ${INCLUDE_FILES}
    ${SOURCE_FILES}
    )

#PRIVATE and PUBLIC items will populate the INCLUDE_DIRECTORIES property of <target>.
#PUBLIC and INTERFACE items will populate the INTERFACE_INCLUDE_DIRECTORIES property of <target>.
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} PUBLIC ${PUBLIC_INCLUDE_DIRS} PRIVATE ${PRIVATE_INCLUDE_DIRS})
TARGET_COMPILE_DEFINITIONS (${TARGET_NAME} PRIVATE BUILDING_${TARGET_NAME} INTERFACE USING_${TARGET_NAME})


IF (BUILD_UNIT_TESTS)
    ADD_GMOCK_TEST(${TARGET_NAME} Tests/main.cpp)
ENDIF()

INSTALL (TARGETS ${TARGET_NAME} LIBRARY ARCHIVE DESTINATION lib COMPONENT Runtime)
INSTALL (DIRECTORY Include/${TARGET_NAME} DESTINATION api/include)
