PROJECT (LIBUSER)

SET(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost 1.46 COMPONENTS serialization REQUIRED)


FILE ( GLOB_RECURSE
       INCLUDE_FILES
       Source/*.h
       Source/*.hpp
      )

SET ( SOURCE_FILES
    Source/main.cpp)

ADD_EXECUTABLE (LibUser ${SOURCE_FILES}
                        ${INCLUDE_FILES})

TARGET_LINK_LIBRARIES (LibUser Math MYSQLPP MYSQLCLIENT)

TARGET_INCLUDE_DIRECTORIES (LibUser PRIVATE ${Boost_INCLUDE_DIR})

INSTALL (TARGETS LibUser
        RUNTIME DESTINATION bin COMPONENT Runtime
        LIBRARY DESTINATION lib COMPONENT Runtime)


INSTALL (SCRIPT "${post_install_script}")
